--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ section#services div.services_container div.services_bottom div.service_item p.s
 
 /* Fim do CSS: Sessão Services */
 
-/* Início do CSS: Section Projects */
+/* Início do CSS: Sessão Projects */
 
 section#projects div.projects_container {
     flex-direction: column;
@@ -323,11 +323,23 @@ section#projects div.projects_container div.projects_header h1.section_title {
     margin-bottom: 50px;
 }
 
+section#projects div.projects_container div.projects_header p.section_text {
+    font-size: 1.5rem;
+    color: #000000;
+    margin: 50px 40px;
+    line-height: 2.5rem;
+    font-weight: 400;
+    letter-spacing: 0.1rem;
+    text-align: justify;
+    max-width: 1000px;
+}
+
 section#projects div.projects_container div.all_projects {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 10px 0px;
 }
 
 section#projects div.projects_container div.all_projects div.project_item {
@@ -344,7 +356,7 @@ section#projects div.projects_container div.all_projects div.project_item {
 section#projects div.projects_container div.all_projects div.project_item div.project_info {
     padding: 30px;
     flex-basis: 50%;
-    background-color: #CCCCCC;
+    background-image: linear-gradient(45deg, #496D96 0%, #354B6C 100%);
     height: 100%;
     display: flex;
     align-items: flex-start;
@@ -352,19 +364,20 @@ section#projects div.projects_container div.all_projects div.project_item div.pr
     flex-direction: column;
 }
 
-section#projects div.projects_container div.all_projects div.project_item div.project_info h1.project_title {
-    font-size: 4rem;
-    font-weight: 500;
-}
-
 section#projects div.projects_container div.all_projects div.project_item div.project_info h2.project_subtitle {
-    font-size: 1.8rem;
+    font-size: 2.5rem;
     font-weight: 500;
+    text-transform: uppercase;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 section#projects div.projects_container div.all_projects div.project_item div.project_info p.project_text {
-    color: #FFFFFF;
+    color: #DEDCDF;
+    text-align: justify;
+    font-size: 1.4rem;
+    font-weight: 300;
+    line-height: 1.9rem;
 }
 
 section#projects div.projects_container div.all_projects div.project_item div.project_image {
@@ -382,6 +395,15 @@ section#projects div.projects_container div.all_projects div.project_item div.pr
     height: 100%;
     width: 100%;
     background-color: #000000;
+    opacity: 0.7;
 }
 
-/* Fim do CSS: Section Projects */
+section#projects div.projects_container div.all_projects div.project_item div.project_image img {
+    transition: 0.3s ease transform;
+}
+
+section#projects div.projects_container div.all_projects div.project_item:hover div.project_image img {
+    transform: scale(1.1);
+}
+
+/* Fim do CSS: Sessão Projects */
