--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,40 @@ section#home div.home div.home_content a.contact_button:hover {
 }
 /* Fim do Código-Fonte da Section: HOME! */
 
+/* Início do Código-Fonte da Section: SERVICES! */
+
+section#services div.services {
+    flex-direction: column;
+    text-align: center;
+    max-width: 1500px;
+    margin: 0px auto;
+    padding: 100px 0px;
+}
+
+section#services div.services div.services_top h1.section_title {
+    font-size: 4rem;
+    font-weight: 300;
+    color: black;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    text-align: center;
+}
+
+section#services div.services div.services_top h1.section_title span.section_title_span {
+    color: crimson;
+}
+
+section#services div.services div.services_top p.section_content {
+    font-size: 1.4rem;
+    margin-top: 5px;
+    line-height: 2.5rem;
+    font-weight: 300;
+    letter-spacing: 0.05rem;
+}
+
+/* Fim do Código-Fonte da Section: SERVICES! */
+
 /* Início do Código-Fonte do CSS: KEYFRAMES */
 
 @keyframes text_reveal_box {
