--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,13 @@ p {
 
 .brand h1 {
 
-    font-size: 1.3rem;
+    font-size: 1.2em;
 
     text-transform: uppercase;
 
     color: white;
+
+    margin-left: 10px;
 
 }
 
@@ -186,7 +188,7 @@ p {
 
     max-width: 1300px;
 
-    padding: 0 10px;
+    padding: 5px 10px;
 
 }
 
@@ -291,9 +293,9 @@ p {
 
 #header .hamburger {
 
-    height: 60px;
+    height: 50px;
 
-    width: 60px;
+    width: 50px;
 
     display: inline-block;
 
@@ -315,7 +317,7 @@ p {
 
     transform: scale(.8);
 
-    margin-right: 20px;
+    margin-right: 10px;
 
 }
 
