--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ p {
 
     position: absolute;
 
-    background-color: rgb(31, 30, 30);
+    background-image: linear-gradient(60deg, #485563 0%, #29323C 100%);
 
     width: 100vw;
 
@@ -220,7 +220,7 @@ p {
 
     overflow-x: hidden;
 
-    transition: .5s ease;
+    transition: .3s ease;
 
     transition-property: left;
 
@@ -287,7 +287,7 @@ p {
 
 #header .nav-list ul li:hover a {
 
-    color: crimson;
+    color: #496D96;
 
 }
 
@@ -343,7 +343,7 @@ p {
 
     height: 2px;
 
-    width: 30px;
+    width: 25px;
 
     position: relative;
 
@@ -1130,6 +1130,36 @@ p {
         font-size: 3rem;
 
     }
+
+    /* Header Section */
+
+    #header .hamburger {
+
+        width: 80px;
+
+        height: 80px;
+
+    }
+
+    #header .hamburger .bar {
+
+        width: 45px;
+
+    }
+
+    #header .hamburger .bar::after {
+
+        top: 12px;
+    
+    }
+    
+    #header .hamburger .bar::before {
+    
+        bottom: 12px;
+    
+    }
+
+    /* End Header Section */
 
     .cta {
 
