--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ p {
 
     text-transform: uppercase;
 
-    color: white;
+    color: #B1BECD;
 
     margin-left: 10px;
 
@@ -142,7 +142,7 @@ p {
 
 .brand h1 span {
 
-    color: crimson;
+    color: #496D96;
 
 }
 
@@ -241,7 +241,7 @@ p {
 
     text-decoration: none;
 
-    color: white;
+    color: #B1BECD;
 
     text-transform: uppercase;
 
@@ -299,7 +299,7 @@ p {
 
     display: inline-block;
 
-    border: 3px solid white;
+    border: 3px solid #354b6c;
 
     border-radius: 50%;
 
@@ -333,7 +333,7 @@ p {
 
     border-radius: 50%;
 
-    border: 3px solid white;
+    border: 3px solid #B1BECD;
 
     animation: hamburger_puls 1s ease infinite;
 
@@ -347,7 +347,7 @@ p {
 
     position: relative;
 
-    background-color: white;
+    background-color: #496D96;
 
     z-index: -1;
 
@@ -366,7 +366,7 @@ p {
 
     left: 0;
 
-    background-color: white;
+    background-color: #B1BECD;
 
     transition: .3s ease;
 
@@ -1372,7 +1372,7 @@ p {
 
         width: fit-content;
 
-        background-color: transparent;
+        background-image: none;
 
     }
 
