--- a/styles.css
+++ b/styles.css
@@ -404,7 +404,7 @@ p {
 
 #hero {
 
-    background-image: url(./images/hero-bg.png);
+    background-image: url(./images/security_guard_scanning_right.jpeg);
 
     background-size: cover;
 
@@ -450,79 +450,21 @@ p {
 
 }
 
-#hero h1 {
+#hero .logo {
 
-    display: block;
+    width: 200px;
 
-    width: fit-content;
+    height: 200px;
 
-    font-size: 4rem;
+    background-image: url(./images/jpgobbi_logo_withoutbg_cropped.png);
+
+    background-size: contain;
+
+    background-repeat: no-repeat;
+
+    background-position: center;
 
     position: relative;
-
-    color: transparent;
-
-    animation: text_reveal .5s ease forwards;
-
-    animation-delay: 1s;
-
-}
-
-#hero h1:nth-child(1) {
-
-    animation-delay: 1s;
-
-}
-
-#hero h1:nth-child(2) {
-
-    animation-delay: 2s;
-
-}
-
-#hero h1:nth-child(3) {
-
-    animation: text_reveal_name .5s ease forwards;
-
-    animation-delay: 3s;
-
-}
-
-#hero h1 span {
-
-    position: absolute;
-
-    top: 0;
-
-    left: 0;
-
-    height: 100%;
-    
-    width: 0;
-
-    background-color: crimson;
-
-    animation: text_reveal_box 1s ease;
-
-    animation-delay: .5s;
-
-}
-
-#hero h1:nth-child(1) span {
-
-    animation-delay: .5s;
-
-}
-
-#hero h1:nth-child(2) span {
-
-    animation-delay: 1.5s;
-
-}
-
-#hero h1:nth-child(3) span {
-
-    animation-delay: 2.5s;
 
 }
 
@@ -1077,48 +1019,6 @@ p {
 
 }
 
-@keyframes text_reveal_box {
-
-    50% {
-
-        width: 100%;
-
-        left: 0;
-
-    }
-
-    100% {
-
-        width: 0;
-
-        left: 100%;
-
-    }
-
-}
-
-@keyframes text_reveal {
-
-    100% {
-
-        color: white;
-
-    }
-
-}
-
-@keyframes text_reveal_name {
-
-    100% {
-
-        color: crimson;
-
-        font-weight: 700;
-
-    }
-
-}
-
 /* End Keyframes */
 
 /* Media Query For Tablet */
@@ -1127,7 +1027,7 @@ p {
 
     .brand h1 {
 
-        font-size: 3rem;
+        font-size: 2.8rem;
 
     }
 
@@ -1177,9 +1077,11 @@ p {
 
     /* Hero Section */
 
-    #hero h1 {
+    #hero .logo {
 
-        font-size: 7rem;
+        width: 250px;
+
+        height: 250px;
 
     }
 
@@ -1395,6 +1297,18 @@ p {
     }
 
     /* End Header */
+
+    /* Hero */
+
+    #hero .logo {
+
+        width: 300px;
+
+        height: 300px;
+
+    }
+
+    /* End Hero */
 
     #services .service-bottom .service-item {
 
