--- a/styles.css
+++ b/styles.css
@@ -450,21 +450,79 @@ p {
 
 }
 
-#hero .logo {
+#hero h1 {
 
-    width: 200px;
+    display: block;
 
-    height: 200px;
+    width: fit-content;
 
-    background-image: url(./images/jpgobbi_logo_withoutbg_cropped.png);
-
-    background-size: contain;
-
-    background-repeat: no-repeat;
-
-    background-position: center;
+    font-size: 4rem;
 
     position: relative;
+
+    color: transparent;
+
+    animation: text_reveal .5s ease forwards;
+
+    animation-delay: 1s;
+
+}
+
+#hero h1:nth-child(1) {
+
+    animation-delay: 1s;
+
+}
+
+#hero h1:nth-child(2) {
+
+    animation-delay: 2s;
+
+}
+
+#hero h1:nth-child(3) {
+
+    animation: text_reveal_name .5s ease forwards;
+
+    animation-delay: 3s;
+
+}
+
+#hero h1 span {
+
+    position: absolute;
+
+    top: 0;
+
+    left: 0;
+
+    height: 100%;
+    
+    width: 0;
+
+    background-color: #354B6C;
+
+    animation: text_reveal_box 1s ease;
+
+    animation-delay: .5s;
+
+}
+
+#hero h1:nth-child(1) span {
+
+    animation-delay: .5s;
+
+}
+
+#hero h1:nth-child(2) span {
+
+    animation-delay: 1.5s;
+
+}
+
+#hero h1:nth-child(3) span {
+
+    animation-delay: 2.5s;
 
 }
 
@@ -1019,6 +1077,48 @@ p {
 
 }
 
+@keyframes text_reveal_box {
+
+    50% {
+
+        width: 100%;
+
+        left: 0;
+
+    }
+
+    100% {
+
+        width: 0;
+
+        left: 100%;
+
+    }
+
+}
+
+@keyframes text_reveal {
+
+    100% {
+
+        color: #B1BECD;
+
+    }
+
+}
+
+@keyframes text_reveal_name {
+
+    100% {
+
+        color: #496D96;
+
+        font-weight: 700;
+
+    }
+
+}
+
 /* End Keyframes */
 
 /* Media Query For Tablet */
@@ -1077,11 +1177,9 @@ p {
 
     /* Hero Section */
 
-    #hero .logo {
+    #hero h1 {
 
-        width: 250px;
-
-        height: 250px;
+        font-size: 7rem;
 
     }
 
@@ -1297,18 +1395,6 @@ p {
     }
 
     /* End Header */
-
-    /* Hero */
-
-    #hero .logo {
-
-        width: 300px;
-
-        height: 300px;
-
-    }
-
-    /* End Hero */
 
     #services .service-bottom .service-item {
 
