--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ p {
 
     background-color: transparent;
 
-    border: 2px solid crimson;
+    border: 2px solid #354B6C;
 
     font-size: 2rem;
 
@@ -124,7 +124,7 @@ p {
 
     color: white;
 
-    background-color: crimson;
+    background-color: #354B6C;
 
 }
 
