--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ img {
 
 p {
     color: black;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     margin-top: 5px;
     line-height: 2.5rem;
     font-weight: 300;
@@ -45,7 +45,7 @@ p {
 
 .section-title {
     font-size: 4rem;
-    font-weight: 300;
+    font-weight: 400;
     color: black;
     margin-bottom: 50px;
     text-transform: uppercase;
@@ -54,7 +54,7 @@ p {
 }
 
 .section-title span {
-    color: crimson;
+    color: #496D96;
 }
 
 .cta {
@@ -268,7 +268,7 @@ p {
 #hero h1 {
     display: block;
     width: fit-content;
-    font-size: 4rem;
+    font-size: 3.8rem;
     position: relative;
     color: transparent;
     animation: text_reveal .5s ease forwards;
@@ -316,121 +316,123 @@ p {
 /* Services Section */
 
 #services .services {
-
     flex-direction: column;
-
     text-align: center;
-
     max-width: 1500px;
-
     margin: 0 auto;
-
     padding: 100px 0;
-
 }
 
 #services .service-top {
-
-    max-width: 500px;
-
+    max-width: 1000px;
     margin: 0 auto;
-
 }
 
 #services .service-bottom {
-
     display: flex;
-
     align-items: center;
-
     justify-content: center;
-
     flex-wrap: wrap;
-
     margin-top: 50px;
-
 }
 
 #services .service-item {
-
     flex-basis: 80%;
-
     display: flex;
-
     align-items: flex-start;
-
     justify-content: center;
-
     flex-direction: column;
-
-    padding: 30px;
-
+    padding: 15px;
     border-radius: 10px;
-
-    background-image: url(./images/img-1.png);
-
-    background-size: cover;
-
     margin: 10px 5%;
-
     position: relative;
-
     z-index: 1;
-
     overflow: hidden;
+}
 
+#services .service-item .service-item-text {
+    color: #B1BECD;
+    font-weight: 500;
+    text-align: left;
+}
+
+#services .service-item .service-item-span {
+    color: #496D96;
+    font-weight: 700;
+}
+
+#services .first {
+    background-image: url(./images/security_professional.jpeg);
+    background-size: cover;
+    background-position: right;
+}
+
+#services .second {
+    background-image: url(./images/armed_surveillance.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+#services .third {
+    background-image: url(./images/unarmed_guard.jpg);
+    background-size: cover;
+    background-position: right;
+}
+
+#services .four {
+    background-image: url(./images/receptionist_professionals.jpg);
+    background-size: cover;
+    background-position: right;
 }
 
 #services .service-item::after {
-
     content: '';
-
     position: absolute;
-
     left: 0;
-
     top: 0;
-
     height: 100%;
-
     width: 100%;
-
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-
-    opacity: .9;
-
+    background-color: rgba(0, 0, 0, 0.9);
+    opacity: .8;
     z-index: -1;
-
 }
 
-#services .service-bottom .icon {
+#services .service-bottom .item-icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px; 
+}
 
-    width: 80px;
+#services .service-bottom .icon-first {
+    background-image: url(./vectors/handshake.svg);
+    background-size: cover;
+    background-position: center;
+}
 
-    width: 80px;
+#services .service-bottom .icon-second {
+    background-image: url(./vectors/armed_guard.svg);
+    background-size: cover;
+    background-position: center;
+}
 
-    margin-bottom: 20px;
+#services .service-bottom .icon-third {
+    background-image: url(./vectors/unarmed_guard.svg);
+    background-size: cover;
+    background-position: center;
+}
 
+#services .service-bottom .icon-four {
+    background-image: url(./vectors/recepcionist.svg);
+    background-size: cover;
+    background-position: center;
 }
 
 #services .service-item h2 {
-
-    font-size: 2rem;
-
-    color: white;
-
+    font-size: 1.6rem;
+    margin-left: 20px;
+    color: #496D96;
     margin-bottom: 10px;
-
     text-transform: uppercase;
-
-}
-
-#services .service-item p {
-
-    color: white;
-
-    text-align: justify;
-
 }
 
 /* End Services Section */
