--- a/styles.css
+++ b/styles.css
@@ -428,146 +428,93 @@ p {
 
 /* Projects Section */
 
-#projects .projects {
+#projects .section-title {
+    font-size: 2.7rem;
+}
 
-    flex-direction: column;
-
-    max-width: 1200px;
-
+#projects .projects-header {
+    max-width: 1000px;
     margin: 0 auto;
+}
 
+#projects .projects {
+    flex-direction: column;
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 100px 0;
-
 }
 
 #projects .projects-header h1 {
-
     margin-bottom: 50px;
-
 }
 
 #projects .all-projects {
-
     display: flex;
-
     align-items: center;
-
     justify-content: center;
-
     flex-direction: column;
-
+    margin-top: 50px;
 }
 
 #projects .project-item {
-
     display: flex;
-
     align-items: center;
-
     justify-content: center;
-
     flex-direction: column;
-
     width: 80%;
-
     margin: 20px auto;
-
     overflow: hidden;
-
     border-radius: 10px;
-
 }
 
 #projects .project-info {
-
-    padding: 30px;
-
+    padding: 20px;
     flex-basis: 50%;
-
     background-color: white;
-
     height: 100%;
-
     display: flex;
-
     align-items: flex-start;
-
     justify-content: center;
-
     flex-direction: column;
-
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-
+    background-image: linear-gradient(0deg,#485563 0%, #29323c 100%);
     color: white;
-
 }
 
 #projects .project-info h1 {
-
-    font-size: 4rem;
-
+    font-size: 2.5rem;
     font-weight: 700;
-
-}
-
-#projects .project-info h2 {
-
-    font-size: 1.8rem;
-
-    font-weight: 500;
-
-    margin-top: 10px;
-
+    margin-top: 15px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    color: #496D96;
 }
 
 #projects .project-info p {
+    font-weight: 400;
+    font-size: 1.7rem;
+    color: #B1BECD;
+}
 
-    color: white;
-
+#projects .project-info p span {
+    color: #496D96;
+    font-weight: 500;
 }
 
 #projects .project-img {
-
     flex-basis: 50%;
-
     height: 300px;
-
-    overflow: hidden;
-
-    position: relative;
-
-}
-
-#projects .project-img::after {
-
-    content: '';
-
-    position: absolute;
-
-    left: 0;
-
-    top: 0;
-
-    height: 100%;
-    
     width: 100%;
-
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-
-    opacity: .7;
-
+    overflow: hidden;
+    position: relative;
+    background-image: linear-gradient(0deg,#485563 0%, #29323c 100%);
 }
 
 #projects .project-img img {
-
     transition: .3s ease transform;
-
 }
 
 #projects .project-item:hover .project-img img {
-
-    transform: scale(1.1);
-
+    transform: scale(1.2);
 }
 
 /* End Projects Section */
@@ -958,40 +905,31 @@ p {
 
     /* Projects Section */
 
+    #projects .section-title {
+        font-size: 4rem;
+    }
+
     #projects .project-item {
-
         flex-direction: row;
-
     }
 
     #projects .project-item:nth-child(even) {
-
         flex-direction: row-reverse;
-
     }
 
     #projects .project-item {
-
         height: 400px;
-
         margin: 0;
-
         width: 100%;
-
         border-radius: 0;
-
     }
 
     #projects .all-projects .project-info {
-
         height: 100%;
-
     }
 
     #projects .all-projects .project-img {
-
         height: 100%;
-
     }
 
     /* End Projects Section */
@@ -1162,6 +1100,14 @@ p {
     }
 
     /* End Services Section */
+
+    /* Projects Section */
+
+    #projects .projects-header p {
+        font-size: 1.8rem;
+    }
+
+    /* End Projects Section */
 
 }
 
