--- a/styles.css
+++ b/styles.css
@@ -700,83 +700,50 @@ p {
 
 /* End Contact Section */
 
-/* Footer */
+/* Footer Section */
 
 #footer {
-
-    background-image: linear-gradient(60deg, #29323C 0%, #485563 100%);
-
+    background-image: linear-gradient(45deg, #29323C 0%, #485563 100%);
 }
 
 #footer .footer {
-
-    min-height: 200px;
-    
+    min-height: 250px;
     flex-direction: column;
-
-    padding-top: 50px;
-
+    padding-top: 20px;
     padding-bottom: 10px;
+}
 
+#footer h1 {
+    margin-bottom: 20px;
 }
 
 #footer h2 {
-
-    color: white;
-
-    font-weight: 500;
-
-    font-size: 1.8rem;
-
+    color: 	#B1BECD;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 1.3rem;
     letter-spacing: .1rem;
-
-    margin-top: 10px;
-
-    margin-bottom: 10px;
-
+    margin-bottom: 20px;
 }
 
 #footer .social-icon {
-
     display: flex;
-
-    margin-bottom: 30px;
-
+    margin-bottom: 20px;
 }
 
 #footer .social-item {
-
     height: 50px;
-
     width: 50px;
-
     margin: 0 5px;
-
-}
-
-#footer .social-item img {
-
-    filter: grayscale(1);
-
-    transition: .3s ease filter;
-
-}
-
-#footer .social-item:hover img {
-
-    filter: grayscale(0);
-
 }
 
 #footer p {
-
-    color: white;
-
-    font-size: 1.3rem;
-
+    color: #B1BECD;
+    font-size: 1.1rem;
+    font-weight: 400;
 }
 
-/* End Footer */
+/* End Footer Section */
 
 /* Keyframes */
 
@@ -1108,6 +1075,19 @@ p {
     }
 
     /* End Projects Section */
+
+    /* Footer Section */
+
+    #footer .social-item img {
+        transition: .2s ease;
+        transition-property: transform;
+    }
+    
+    #footer .social-item:hover img {
+        transform: scale(1.2);
+    }
+
+    /* End Footer Section */
 
 }
 
