--- a/styles.css
+++ b/styles.css
@@ -60,19 +60,20 @@ p {
 .cta {
     display: inline-block;
     padding: 10px 30px;
-    color: white;
+    color: #FFFFFF;
     background-color: transparent;
     border: 2px solid #496D96;
     font-size: 2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
     margin-top: 30px;
+    border-radius: 7px;
     transition: .3s ease;
     transition-property: background-color, color;
 }
 
 .cta:hover {
-    color: white;
+    color: #FFFFFF;
     background-color: #496D96;
 }
 
@@ -618,84 +619,66 @@ p {
 
 /* Contact Section */
 
+#contact .contact .section-title {
+    font-size: 2.7rem;
+}
+
 #contact .contact {
-
     flex-direction: column;
-
     max-width: 1200px;
-
     margin: 0 auto;
-
 }
 
 #contact .contact-items {
-
     width: 320px;
-
+    margin: 50px auto;
 }
 
 #contact .contact-item {
-
     width: 80%;
-
     padding: 20px;
-
     text-align: center;
-
     border-radius: 10px;
-
     padding: 30px;
-
     margin: 30px;
-
     display: flex;
-
     justify-content: center;
-
     align-items: center;
-
     flex-direction: column;
-
     box-shadow: 0px 0px 18px 0 #0000002C;
-
     transition: .3s ease box-shadow;
-
 }
 
 #contact .contact-item:hover {
-
     box-shadow: 0px 0px 5px 0 #0000002C;
-
 }
 
 #contact .icon {
-
     width: 70px;
-
     margin: 0 auto;
-
     margin-bottom: 10px;
-
 }
 
 #contact .contact-info h1 {
-
-    font-size: 2.5rem;
-
+    font-size: 2rem;
     font-weight: 500;
-
+    color: #000000;
     margin-bottom: 5px;
-
+    text-transform: uppercase;
 }
 
 #contact .contact-info h2 {
-
-    font-size: 1.3rem;
-
+    font-size: 1.5rem;
     line-height: 2rem;
-
+    text-transform: uppercase;
     font-weight: 500;
+    color: #496D96;
+}
 
+#contact .contact-info h3 {
+    font-size: 1.5rem;
+    color: #354B6C;
+    margin-top: 10px;
 }
 
 /* End Contact Section */
@@ -951,62 +934,9 @@ p {
 
     /* Contact Section */
 
-    #contact .contact {
-
-        flex-direction: column;
-        
-        padding: 100px 0;
-        
-        align-items: center;
-        
-        justify-content: center;
-        
-        min-width: 20vh;
-        
-	}
-	#contact .contact-items {
-
-        width: 100%;
-        
-        display: flex;
-        
-        flex-direction: row;
-        
-        justify-content: space-evenly;
-        
-        margin: 0;
-        
-	}
-	#contact .contact-item {
-
-        width: 30%;
-        
-        margin: 0;
-        
-        flex-direction: row;
-        
-	}
-	#contact .contact-item .icon {
-
-        height: 100px;
-        
-        width: 100px;
-        
-	}
-	#contact .contact-item .icon img {
-
-        object-fit: contain;
-        
-	}
-	#contact .contact-item .contact-info {
-
-        width: 100%;
-        
-        text-align: left;
-        
-        padding-left: 20px;
-        
-	}
+    #contact .contact .section-title {
+        font-size: 4rem;
+    }
 
     /* End Contact Section */
 
@@ -1075,6 +1005,32 @@ p {
     }
 
     /* End Projects Section */
+
+    /* Contact Section */
+
+    #contact .contact p {
+        font-size: 1.8rem;
+    }
+
+    #contact .contact {
+        max-width: 1000px;
+        flex-direction: column;
+        padding: 100px 0;
+        align-items: center;
+        justify-content: center;
+        min-width: 20vh;
+    }
+
+    #contact .contact-items {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        margin: 50px;
+    }
+
+    /* End Contact Section */
 
     /* Footer Section */
 
